--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -1645,107 +1645,107 @@ stories:
   domain: http://www.gazettextra.com/
   link: https://www.gazettextra.com/news/nation_world/concerts-fireworks-and-a-military-parade-mark-july-fourth/image_3de16f87-0065-5c4f-bf1a-3bd40869f67c.html
 images:
-- name: pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
-- name: razorcliff-razorcliff-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-neo-instinct.jpg
-- name: oldhouse-oldhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-gan-vogh.jpg
-- name: beach-rocks-beach-rocks-currents-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-pablo-blue.jpg
-- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-- name: old-house-oldhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-yellow-collage.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-constitution.jpg
-- name: white-house-lawn-white-house-window-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-soul.jpg
-- name: flower-barbed-wire-flower-barbed-wire-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-constitution.jpg
-- name: old-door-lock-old-door-lock-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-purp-paper.jpg
-- name: legal-statue-legalstatue-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-really-hot.jpg
-- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-atari-asteroids.png
-- name: oldhotel-oldhotel-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-rain.jpg
-- name: server-racks-door-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-dark-dali.jpg
-- name: white-house-lawn-white-house-lawn-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-plentiful.jpg
-- name: server-cloud-server-racks-door-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dark-soul.jpg
-- name: crow-crow-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-post-modern.jpg
-- name: crow_dali_three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dali_three.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-- name: ellis-island-ellisisland-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-brush.jpg
-- name: gypsymosaic-gypsy-eyes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes.jpg
-- name: server-cloud-server-racks-clouds-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-wols.jpg
-- name: old-barn-old-barn-1500-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-dream.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dry-skin.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dry-skin.JPG
-- name: san-francisco-city-bridge-sf-city-bridge-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-kandinsky-bv.jpg
-- name: statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-- name: meadowbutterfly-meadow-butterfly-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sunday.jpg
-- name: oldsmallboat-oldsmallboat-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-dali.jpg
-- name: beach-clouds-lifeguard-beachclouds-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-satan-red.jpg
-- name: old-door-lock-old-door-lock-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-brush.jpg
-- name: old-house-oldhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-electricity.jpg
-- name: old-cabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-internet-numbers.jpg
-- name: anza-borrego-desert-state-park.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/anza-borrego-desert-state-park.jpg
-- name: razorwire-DSC-0080-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-far-away.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-diego-rivera1.jpg
-- name: bordercrossing-bordercrossing-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-spagetti-accident.jpg
-- name: server-cloud-server-racks-door-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-yellow-collage.jpg
-- name: adam-smith-adam-smith-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-marcel-duchamp.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-marcel-duchamp.png
-- name: downtheline-downtheline-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-constitution.jpg
-- name: white-house-whitehouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-cinnamon-rolls.jpg
-- name: mistywoods-babyfoot-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-diego-rivera1.jpg
-- name: old-granary-field-granaryfield-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-oily-mcoilface.jpg
-- name: eduardo-eduardo-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-plentiful.jpg
-- name: oldtrain-oldtrain-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sunday.jpg
-- name: catacombs-catacombs-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-asteroids.jpg
-- name: sand-hand-sand-hand-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-gred-mash.jpg
-- name: death-valley-death-valley-national-park-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-space-pizza.jpg
-- name: sand-hand-sand-hand-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
-- name: dragon-desert-desert-dragon-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-jap-dys-1.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-green-zuma.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-green-zuma.JPG
+- name: border-crossing-bordercrossing-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-clean-view.png
+- name: liberty-back-statue-liberty-back-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-diego-rivera1.jpg
+- name: fence-fence-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sand-paper.jpg
+- name: liberty-back-statue-liberty-back-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kandinsky-bv.jpg
+- name: aws-s3-stories-old-gas-pumps.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-gas-pumps.jpg
+- name: aws-s3-stories-machine-road-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-machine-road-light-dali.jpg
+- name: status-berlin-status-berlin-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-jap-dys-1.jpg
+- name: server-cloud-server-racks-clouds-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-neo-instinct.jpg
+- name: school-clouds-church-clouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-brush.jpg
+- name: mosaic-face-mosaic-face-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit.jpg
+- name: berlinwall-DSC-0084-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-alien-goggles.jpg
+- name: wind-mills-windmills-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-atari-asteroids.jpg
+- name: nazi-invasion-DSC_0088.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0088.jpg
+- name: old-granary-field-granaryfield-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dali-two.jpg
+- name: containership-containership-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
+- name: store-on-corner-oldcabin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-rain.jpg
+- name: liberty-back-statue-liberty-back-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-rainbow-festival.jpg
+- name: blossombar-far-away-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-50-62.jpg
+- name: stories-art-museum-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-art-museum-dark-dali.jpg
+- name: san-francisco-street-view-san-francisco-street-view-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crafty-painting.jpg
+- name: white-house-whitehouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-kandinsky-bv.jpg
+- name: status-berlin-status-berlin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-crafty-painting.jpg
+- name: store-on-corner-oldcabin-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-paper.jpg
+- name: amusement-park-amusement-park-2-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-wav-pr.jpg
+- name: bluelake-blue-granite-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-granite-file-00-00-38-67.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crunch-paper.jpg
+- name: cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
+- name: oldcabin-store-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-kand-two.jpg
+- name: oldhousecars-house-old-cars-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-atari-asteroids.jpg
+- name: capital-battle-capitolbattle-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purp-paper.jpg
+- name: berlinwall2-berlinwall-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-nazi-poster.jpg
+- name: server-cloud-server-racks-clouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-internet-numbers.jpg
+- name: carry-load-carryload-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sand-paper.jpg
+- name: liberty-back-statue-liberty-back-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-constitution.jpg
+- name: old-cabin-oldcabin-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colorful-blocks.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-dali.jpg
+- name: capital-dc-flag-side-view-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-norman-rockwell-ruby-bridges.jpg
+- name: window-window-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-cinnamon-rolls.jpg
+- name: aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
+- name: scream-DSC_0267.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0267.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
+- name: server-cloud-server-racks-clouds-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-hot-spicy.jpg
+- name: mosaic-face-mosaic-face-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-atari-asteroids.jpg
+- name: amusement-park-amusement-park-2-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crafty-painting.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
+- name: lincoln-memorial-lincolnmemorial-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-collage.jpg
+- name: mediterranean-mediterranean-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-kand-two.jpg
+- name: dc-statue-dcstatue-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-sand-paper.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+- name: legal-statue-legalstatue-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-rainbow-festival.jpg
 ---
 In Hong Kong, Colonial Flag Still A Symbol Of Prized Values.&nbsp;Amusement Park Reminder Of Hurricane May Soon Come Down.&nbsp;Leopard Football Welcomes Trio Brown, Finley And Pennington To Coaching Staff.&nbsp;Garmin's InReach Mini Satellite Device Essential For Backcountry Travel.&nbsp;Welcome Mat Winners Announced.&nbsp;Trump Celebrates 'greatest Political Journey' In History.&nbsp;Accused Burglar Offers Homeowner Meth Hit.&nbsp;Pastor Gregory Ryan Wolfe.&nbsp;
